delete facetts repo

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -1101,7 +1101,48 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load the newly uploaded CSV file\n",
+    "file_path = '/Volumes/One_Touch/icassp2025/ESD_eng.csv'\n",
+    "data = pd.read_csv(file_path)\n",
+    "\n",
+    "# Define a function to generate five captions using synonyms based on sex and emotion\n",
+    "def create_captions(sex, emotion):\n",
+    "    # Sex and emotion mappings\n",
+    "    sex_map = {'W': 'woman', 'M': 'man'}\n",
+    "    emotion_synonyms = {\n",
+    "        \"angry\": [\"angry\", \"irate\", \"furious\", \"enraged\", \"upset\"],\n",
+    "        \"happy\": [\"happy\", \"joyful\", \"elated\", \"cheerful\", \"pleased\"],\n",
+    "        \"sad\": [\"sad\", \"sorrowful\", \"gloomy\", \"mournful\", \"somber\"],\n",
+    "        \"neutral\": [\"neutral\", \"impassive\", \"unemotional\", \"detached\", \"stoic\"],\n",
+    "        \"fear\": [\"fearful\", \"scared\", \"terrified\", \"alarmed\", \"panicked\"],\n",
+    "        \"surprise\": [\"surprised\", \"astonished\", \"amazed\", \"shocked\", \"stunned\"],\n",
+    "        \"disgust\": [\"disgusted\", \"appalled\", \"repulsed\", \"offended\", \"nauseated\"]\n",
+    "    }\n",
+    "\n",
+    "    subject = sex_map.get(sex, \"person\")\n",
+    "    synonyms = emotion_synonyms.get(emotion.lower(), [emotion.lower()] * 5)\n",
+    "    \n",
+    "    # Generate five captions\n",
+    "    captions = [\n",
+    "        f\"A {subject} says with a {synonyms[i]} tone.\"\n",
+    "        for i in range(5)\n",
+    "    ]\n",
+    "    return captions\n",
+    "\n",
+    "# Apply the function to generate captions for each row\n",
+    "captions = data.apply(lambda row: create_captions(row['sex'], row['emotion']), axis=1)\n",
+    "\n",
+    "# Create new caption columns from the generated captions\n",
+    "caption_columns = pd.DataFrame(captions.tolist(), columns=['caption1', 'caption2', 'caption3', 'caption4', 'caption5'])\n",
+    "\n",
+    "# Concatenate the original data with the new caption columns\n",
+    "updated_data = pd.concat([data, caption_columns], axis=1)\n",
+    "\n",
+    "# Save the updated CSV with new caption columns\n",
+    "updated_file_path = '/Volumes/One_Touch/icassp2025/Updated_ESD_with_Captions.csv'\n",
+    "updated_data.to_csv(updated_file_path, index=False)"
+   ]
   }
  ],
  "metadata": {
