huggingface vits test

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -15,6 +15,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import VitsModel\n",
+    "model = VitsModel.from_pretrained(\"kakao-enterprise/vits-vctk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "\n",
+    "class EmotionMultiDataset(Dataset):\n",
+    "    def __init__(self, txt_data, img_data, audio_data, emotion_labels):\n",
+    "        self.text_data = txt_data\n",
+    "        self.image_data = img_data\n",
+    "        self.audio_data = audio_data\n",
+    "        self.emotion_labels = emotion_labels\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.emotion_labels)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        return {\n",
+    "\t\t\t'text': self.text_data[idx],\n",
+    "\t\t\t'image': self.image_data[idx],\n",
+    "\t\t\t'audio': self.audio_data[idx],\n",
+    "\t\t\t'emotion': self.emotion_labels[idx]\n",
+    "\t\t}\n",
+    "\n",
+    "\n",
+    "class ImagePromptEncoder(nn.Module):\n",
+    "    def __init__(self, image_model, output_dim):\n",
+    "        super().__init__()\n",
+    "        self.image_model = image_model\n",
+    "        self.projection = nn.Linear(image_model.config.hidden_size, output_dim)\n",
+    "    \n",
+    "    def forward(self, image):\n",
+    "        image_features = self.image_model(image).last_hidden_state[:, 0]  # Use CLS token\n",
+    "        return self.projection(image_features)\n",
+    "\n",
+    "class TextEmotionEncoder(nn.Module):\n",
+    "    def __init__(self, text_model, output_dim):\n",
+    "        super().__init__()\n",
+    "        self.text_model = text_model\n",
+    "        self.projection = nn.Linear(text_model.config.hidden_size, output_dim)\n",
+    "    \n",
+    "    def forward(self, input_ids, attention_mask):\n",
+    "        emotion_features = self.text_model(input_ids, attention_mask).last_hidden_state[:, 0]  # Use CLS token\n",
+    "        return self.projection(emotion_features)\n",
+    "    \n",
+    "\n",
+    "class MultimodalEmotionalVITS(nn.Module):\n",
+    "    def __init__(self, vits_model, image_model, text_emotion_model, emotion_dim):\n",
+    "        super().__init__()\n",
+    "        self.vits_model = vits_model\n",
+    "        self.image_encoder = ImagePromptEncoder(image_model, emotion_dim)\n",
+    "        self.text_emotion_encoder = TextEmotionEncoder(text_emotion_model, emotion_dim)\n",
+    "        \n",
+    "        # Modify the input dimension of the first layer in the VITS model\n",
+    "        # to accommodate the additional emotion and image embeddings\n",
+    "        new_input_dim = vits_model.config.hidden_size + 2 * emotion_dim\n",
+    "        self.vits_model.encoder.proj_in = nn.Linear(new_input_dim, vits_model.config.hidden_size)\n",
+    "    \n",
+    "    def forward(self, input_ids, attention_mask, image_prompt, emotion_text_ids, emotion_text_mask):\n",
+    "        image_embedding = self.image_encoder(image_prompt)\n",
+    "        emotion_embedding = self.text_emotion_encoder(emotion_text_ids, emotion_text_mask)\n",
+    "        \n",
+    "        # Get the original VITS encoder output\n",
+    "        encoder_hidden_states = self.vits_model.encoder(\n",
+    "            input_ids=input_ids,\n",
+    "            attention_mask=attention_mask,\n",
+    "            return_dict=True\n",
+    "        ).last_hidden_state\n",
+    "        \n",
+    "        # Concatenate all inputs\n",
+    "        combined_input = torch.cat([\n",
+    "            encoder_hidden_states,\n",
+    "            image_embedding.unsqueeze(1).expand(-1, encoder_hidden_states.size(1), -1),\n",
+    "            emotion_embedding.unsqueeze(1).expand(-1, encoder_hidden_states.size(1), -1)\n",
+    "        ], dim=-1)\n",
+    "        \n",
+    "        # Pass the combined input through the modified VITS model\n",
+    "        output = self.vits_model(\n",
+    "            inputs_embeds=combined_input,\n",
+    "            attention_mask=attention_mask,\n",
+    "            return_dict=True\n",
+    "        )\n",
+    "        \n",
+    "        return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(os.path.abspath('/workspace/jaeyoung/StoryTeller/ONE-PEACE'))\n",
+    "from one_peace.models import from_pretrained\n",
+    "\n",
+    "emotion_dim = 64\n",
+    "onepeace_model = from_pretrained(\n",
+    "        model_name_or_path=\"/workspace/jaeyoung/checkpoints/one-peace_pretrained.pt\",\n",
+    "        model_type=\"one_peace_retrieval\",\n",
+    "        device='cuda:0',\n",
+    "        dtype=\"float16\"\n",
+    "    )\n",
+    "multimodal_vits = MultimodalEmotionalVITS(model, onepeace_model, onepeace_model, emotion_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
