--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,6 +131,55 @@
     "        dtype=\"float16\"\n",
     "    )\n",
     "multimodal_vits = MultimodalEmotionalVITS(model, onepeace_model, onepeace_model, emotion_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['neutral', 'angry', 'happy', 'sad', 'surprised'], dtype=object)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('/workspace/jaeyoung/StoryTeller/Updated_ESD_with_Captions.csv')\n",
+    "df.emotion.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir_path = '/workspace/jaeyoung/datasets/Emotion_Speech_Dataset'\n",
+    "speakers = os.listdir(dir_path)\n",
+    "for s in speakers:\n",
+    "\tspeaker_path = os.path.join(dir_path, s)\n",
+    " \n",
+    "\tif not os.path.isdir(speaker_path):\n",
+    "\t\tcontinue\n",
+    "\temotion = os.listdir(speaker_path)\n",
+    "\tfor e in emotion:\n",
+    "\t\told_name = os.path.join(speaker_path, e)\n",
+    "\t\tif e in ['Angry', 'Happy', 'Sad', 'Neutral']:\n",
+    "\t\t\tnew_name = os.path.join(speaker_path, e.lower())\n",
+    "\t\t\tos.rename(old_name, new_name)\n",
+    "\t\tif e =='Surprise':\n",
+    "\t\t\tnew_name = os.path.join(speaker_path, 'surprised')\n",
+    "\t\t\tos.rename(old_name, new_name)"
    ]
   },
   {
@@ -1267,7 +1316,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "onepeace",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1281,7 +1330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
