add imagepath to csv

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,6 +164,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ESD 파일명 변경\n",
+    "\n",
     "dir_path = '/workspace/jaeyoung/datasets/Emotion_Speech_Dataset'\n",
     "speakers = os.listdir(dir_path)\n",
     "for s in speakers:\n",
@@ -180,6 +182,33 @@
     "\t\tif e =='Surprise':\n",
     "\t\t\tnew_name = os.path.join(speaker_path, 'surprised')\n",
     "\t\t\tos.rename(old_name, new_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TabError",
+     "evalue": "inconsistent use of tabs and spaces in indentation (1384778232.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    image_list = os.listdir(image_dir)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mTabError\u001b[0m\u001b[0;31m:\u001b[0m inconsistent use of tabs and spaces in indentation\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MM-TTS image path 설정\n",
+    "\n",
+    "df = pd.read_csv('/workspace/jaeyoung/StoryTeller/merged_caption_MMTTS.csv')\n",
+    "\n",
+    "def imgpath(filename):\n",
+    "\timage_dir = os.path.join('/workspace/jaeyoung/datasets/mm-tts-dataset/video_image_save', filename.replace('.wav',''))\n",
+    "\timage_list = os.listdir(image_dir)\n",
+    "\timages = [os.path.join(image_dir, x) for x in image_list]\n",
+    "\treturn images\n",
+    "df['imagepath'] = df['filename'].apply(imgpath)"
    ]
   },
   {
