--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -186,18 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TabError",
-     "evalue": "inconsistent use of tabs and spaces in indentation (1384778232.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    image_list = os.listdir(image_dir)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mTabError\u001b[0m\u001b[0;31m:\u001b[0m inconsistent use of tabs and spaces in indentation\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# MM-TTS image path 설정\n",
     "\n",
@@ -209,6 +200,37 @@
     "\timages = [os.path.join(image_dir, x) for x in image_list]\n",
     "\treturn images\n",
     "df['imagepath'] = df['filename'].apply(imgpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/workspace/jaeyoung/datasets/mm-tts-dataset/video_image_save/W016_fear_level_2_016/2.jpg',\n",
+       " '/workspace/jaeyoung/datasets/mm-tts-dataset/video_image_save/W016_fear_level_2_016/1.jpg',\n",
+       " '/workspace/jaeyoung/datasets/mm-tts-dataset/video_image_save/W016_fear_level_2_016/0.jpg']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['imagepath'][10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/workspace/jaeyoung/StoryTeller/merged_caption_imgpath_MMTTS.csv', index=False)"
    ]
   },
   {
