--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -20,7 +20,61 @@
    "outputs": [],
    "source": [
     "from transformers import VitsModel\n",
+    "from torch.utils.data import Dataset\n",
+    "import torch.nn as nn\n",
     "model = VitsModel.from_pretrained(\"kakao-enterprise/vits-vctk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# resampling code\n",
+    "\n",
+    "import ray\n",
+    "import librosa\n",
+    "import soundfile as sf\n",
+    "import os\n",
+    "\n",
+    "ray.init(num_cpus=16)\n",
+    "\n",
+    "def resample_multiple_audio(input_dir, output_dir, tgt_sr=22050):\n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "    audio_files = [os.path.join(input_dir, x) for x in os.listdir(input_dir) if x.lower().endswith('.wav','flac')]\n",
+    "    \n",
+    "    if not audio_files:\n",
+    "        print('No audio files found in this dir')\n",
+    "        return []\n",
+    "    \n",
+    "    print(f\"Found {len(audio_files)} audio files. Start resampling..\")\n",
+    "    \n",
+    "    resample_tasks = [resample_audio.remote(file, output_dir, tgt_sr) for file in audio_files]\n",
+    "    resampled_files = ray.get(resample_tasks)\n",
+    "    print('Resampling completed.')\n",
+    "    \n",
+    "\n",
+    "@ray.remote\n",
+    "def resample_audio(input_path, output_dir, tgt_sr = 22050):\n",
+    "    try:\n",
+    "        audio, sr = librosa.load(input_path, sr=None)\n",
+    "    \n",
+    "\t\tif sr != tgt_sr:\n",
+    "\t\t\taudio_resampled = librosa.resample(audio, sr, tgt_sr)\n",
+    "\t\telse:\n",
+    "\t\t\taudio_resampled = audio\n",
+    "   \n",
+    "\t\tfilename = os.path.basename(input_path)\n",
+    "\t\tname, ext = os.path.splitext(filename)\n",
+    "\t\toutput_path = os.path.join(output_dir, f\"{name}_resampled{ext}\")\n",
+    "\n",
+    "\t\tsf.write(output_path, audio_resampled, tgt_sr)\n",
+    "  \n",
+    "    \treturn output_path\n",
+    " \n",
+    "\texcept Exception as e:\n",
+    "\t\treturn f\"Error {input_path}: {e}\""
    ]
   },
   {
@@ -29,10 +83,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.utils.data import Dataset\n",
-    "import torch.nn as nn\n",
-    "\n",
-    "\n",
     "class EmotionMultiDataset(Dataset):\n",
     "    def __init__(self, txt_data, img_data, audio_data, emotion_labels):\n",
     "        self.text_data = txt_data\n",
@@ -222,15 +272,6 @@
    ],
    "source": [
     "df['imagepath'][10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('/workspace/jaeyoung/StoryTeller/merged_caption_imgpath_MMTTS.csv', index=False)"
    ]
   },
   {
