modify emotion vits

--- a/ONE-PEACE/model_analysis.ipynb
+++ b/ONE-PEACE/model_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8654,6 +8654,76 @@
    "outputs": [],
    "source": [
     "torch.save(vl_model, '/workspace/jaeyoung/checkpoints/one_peace_fusion/vl_txt_update_1014.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "non-default argument follows default argument (1717813967.py, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 17\u001b[0;36m\u001b[0m\n\u001b[0;31m    def load_checkpoint(checkpoint_path=checkpoint_path, model, optimizer=None):\u001b[0m\n\u001b[0m                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-default argument follows default argument\n"
+     ]
+    }
+   ],
+   "source": [
+    "checkpoint_path = \"/workspace/jaeyoung/checkpoint/vits/pretrained_vctk.pth\"\n",
+    "import sys\n",
+    "sys.path.append(os.path.abspath('/workspace/jaeyoung/StoryTeller/emotion_vits'))\n",
+    "import utils\n",
+    "from models import SynthesizerTrn\n",
+    "from text.symbols import symbols\n",
+    "\n",
+    "hps = utils.get_hparams()\n",
+    "model = SynthesizerTrn(\n",
+    "      len(symbols),\n",
+    "      1024// 2 + 1,\n",
+    "      8192 // 256,\n",
+    "      n_speakers=57,\n",
+    "      n_emotions=8,\n",
+    "      **hps.model).cuda()\n",
+    "\n",
+    "def load_checkpoint(checkpoint_path=checkpoint_path, model=model, optimizer=None):\n",
+    "  assert os.path.isfile(checkpoint_path)\n",
+    "  checkpoint_dict = torch.load(checkpoint_path, map_location='cpu')\n",
+    "  iteration = checkpoint_dict['iteration']\n",
+    "  learning_rate = checkpoint_dict['learning_rate']\n",
+    "  if optimizer is not None:\n",
+    "    optimizer.load_state_dict(checkpoint_dict['optimizer'])\n",
+    "  saved_state_dict = checkpoint_dict['model']\n",
+    "  if hasattr(model, 'module'):\n",
+    "    state_dict = model.module.state_dict()\n",
+    "  else:\n",
+    "    state_dict = model.state_dict()\n",
+    "  new_state_dict= {}\n",
+    "  for k, v in state_dict.items():\n",
+    "    try:\n",
+    "    # if k in saved_state_dict and saved_stated_dict[k].size() == v.size():\n",
+    "      new_state_dict[k] = saved_state_dict[k]\n",
+    "    except:\n",
+    "      # else:\n",
+    "      logger.info(\"%s is not in the checkpoint\" % k)\n",
+    "      new_state_dict[k] = v\n",
+    "  if hasattr(model, 'module'):\n",
+    "    model.module.load_state_dict(new_state_dict)\n",
+    "  else:\n",
+    "    model.load_state_dict(new_state_dict)\n",
+    "  logger.info(\"Loaded checkpoint '{}' (iteration {})\" .format(\n",
+    "    checkpoint_path, iteration))\n",
+    "  return model, optimizer, learning_rate, iteration\n"
    ]
   },
   {
