--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "       'disgusted', 'neutral'], dtype=object)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,17 +154,26 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('/workspace/jaeyoung/StoryTeller/merged_caption_imgpath_MMTTS.csv')\n",
+    "df = pd.read_csv('/workspace/jaeyoung/StoryTeller/valid1000_merged_caption_imgpath_MMTTS.csv')\n",
     "df.emotion.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['tmp_audiopath'] = df['filename'].apply(lambda x: os.path.join( \"/workspace/jaeyoung/datasets/mm-tts-dataset/raw\", x))"
+    "df['audiopath'] = df['audiopath'].apply(lambda x: x.replace('.wav', '_resampled.wav'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/workspace/jaeyoung/StoryTeller/valid1000_merged_caption_imgpath_MMTTS.csv',index=False)"
    ]
   },
   {
